# trollingo

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
learning/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
learning/management/commands/: load_demo_data.py
learning/migrations/: 0001_initial.py  0002_lesson_content.py  0003_profile.py
learning/static/css/: trollingo.css
learning/templatetags/: extras.py
templates/: base.html
templates/learning/: course_detail.html  course_list.html  home.html  lesson_detail.html  lesson_quiz.html  lesson_quiz_result.html  login.html  register.html
trollingo/: asgi.py  settings.py  urls.py  wsgi.py
